--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bot-md",
   "multi-device"
  ],
- "author": "Pain (PainX001)",
+ "author": "Pain (Nagatopain07)",
  "license": "MIT",
  "dependencies": {
   "@adiwajshing/baileys": "^4.4.0",
